--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -1377,7 +1377,7 @@ sich in der Einheits Bewegungsreichtweite bewegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_COLONIZE_TILE</zType>
-		<Translation>Besiedle Kache für {0_money} ({1_city})</Translation>
+		<Translation>Besiedle Kachel für {0_money} ({1_city})</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_BECOME_AGENT</zType>
