--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -51,7 +51,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_GAME_OVER_POPUP</zType>
-		<Translation>Du hast das Ende des Speils erreicht.</Translation>
+		<Translation>Du hast das Ende des Spiels erreicht.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_TEAM_DEFEAT_POPUP</zType>
