--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -3031,7 +3031,7 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_EFFECT_CITY_HELP_YIELDS_YIELD_RATE_PER_POPULATION</zType>
-		<Translation>{0_yield} per Population</Translation>
+		<Translation>{0_yield} pro Einwohner</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_EFFECT_CITY_HELP_YIELDS_YIELD_RATE_PER_CULTURE_LEVEL</zType>
