--- a/Translations/German/text-hint-change.xml
+++ b/Translations/German/text-hint-change.xml
@@ -35,7 +35,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_8</zType>
-		<Translation>Unbenutzte   icon((YIELD_CIVICS)  und  icon(YIELD_TRAINING)  in deiner Stadt werden zum nationalen Lager hinzugefügt.</Translation>
+		<Translation>Unbenutzte   icon(YIELD_CIVICS)  und  icon(YIELD_TRAINING)  in deiner Stadt werden zum nationalen Lager hinzugefügt.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HINT_9</zType>
