--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -187,11 +187,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_LAW_SLAVERY</zType>
-		<Translation><![CDATA[Wir behalten Sklaven]]></Translation>
+		<Translation><![CDATA[Wir behalten Sklaven.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_LAW_FREEDOM</zType>
-		<Translation><![CDATA[Unsere Untertanen werden frei sein]]></Translation>
+		<Translation><![CDATA[Unsere Untertanen werden frei sein.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_LAW_CENTRALIZATION</zType>
